Detalle carrousel productos

--- a/index.html
+++ b/index.html
@@ -491,14 +491,14 @@
 
         <div class="collapse" id="collapsealimentacion">
           <div class="card card-body">
-            <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Suplementos</h3>
+            <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Alimentación</h3>
             <div id="carouselIndicators" class="carrousel carousel slide my-5">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="row">
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -510,7 +510,7 @@
                     </div>
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -526,7 +526,7 @@
                   <div class="row">
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -538,7 +538,7 @@
                     </div>
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -567,14 +567,14 @@
 
         <div class="collapse" id="collapsefrescos">
           <div class="card card-body">
-            <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Suplementos</h3>
+            <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Frescos</h3>
             <div id="carouselIndicators" class="carrousel carousel slide my-5">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="row">
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -586,7 +586,7 @@
                     </div>
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -602,7 +602,7 @@
                   <div class="row">
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -614,7 +614,7 @@
                     </div>
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -643,14 +643,14 @@
 
         <div class="collapse" id="collapsecosmetica">
           <div class="card card-body">
-            <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Suplementos</h3>
+            <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Cosmética e higiene</h3>
             <div id="carouselIndicators" class="carrousel carousel slide my-5">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="row">
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -662,7 +662,7 @@
                     </div>
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -678,7 +678,7 @@
                   <div class="row">
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -690,7 +690,7 @@
                     </div>
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -719,14 +719,14 @@
 
         <div class="collapse" id="collapsemama">
           <div class="card card-body">
-            <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Suplementos</h3>
+            <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Mamá y bebé</h3>
             <div id="carouselIndicators" class="carrousel carousel slide my-5">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="row">
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -738,7 +738,7 @@
                     </div>
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -754,7 +754,7 @@
                   <div class="row">
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -766,7 +766,7 @@
                     </div>
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -795,14 +795,14 @@
 
         <div class="collapse" id="collapsehogar">
           <div class="card card-body">
-            <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Suplementos</h3>
+            <h3 style="margin-top: 20px; margin-bottom: 20px;">Productos: Hogar y huerto</h3>
             <div id="carouselIndicators" class="carrousel carousel slide my-5">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="row">
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -814,7 +814,7 @@
                     </div>
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -830,7 +830,7 @@
                   <div class="row">
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
@@ -842,7 +842,7 @@
                     </div>
                     <div class="col">
                       <div class="card" style="width: 200px;">
-                        <img src="ref/prod1.webp" class="card-img-top" alt="...">
+                        <img src="ref/sup1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h6 class="text-muted">NaturHit Essentials</h6>
                           <h5 class="card-title">Ashwagandha 600 mg</h5>
