Enlaces sellos fixed

--- a/index.html
+++ b/index.html
@@ -90,19 +90,23 @@
       <!-- Menú de perfil, pedidos, notificaciones y carrito -->
       <div class="personal col-2 order-4" style="width: fit-content;">
         <div class="row">
-          <div class="perfil col d-flex" style="justify-content: center; align-items: center; flex-wrap: wrap;">
+          <div class="perfil col d-flex" type="button"
+            style="justify-content: center; align-items: center; flex-wrap: wrap;">
             <i class="bi bi-person w-100 text-center" style="font-size: x-large;"></i>
             <p>Perfil</p>
           </div>
-          <div class="perfil col d-flex" style="justify-content: center; align-items: center; flex-wrap: wrap;">
+          <div class="perfil col d-flex" type="button"
+            style="justify-content: center; align-items: center; flex-wrap: wrap;">
             <i class="bi bi-box-seam w-100 text-center" style="font-size: x-large;"></i>
             <p>Pedidos</p>
           </div>
-          <div class="perfil col d-flex" style="justify-content: center; align-items: center; flex-wrap: wrap;">
+          <div class="perfil col d-flex" type="button"
+            style="justify-content: center; align-items: center; flex-wrap: wrap;">
             <i class="bi bi-bell w-100 text-center" style="font-size: x-large;"></i>
             <p>Notificaciones</p>
           </div>
-          <div class="perfil col d-flex" style="justify-content: center; align-items: center; flex-wrap: wrap;">
+          <div class="perfil col d-flex" type="button"
+            style="justify-content: center; align-items: center; flex-wrap: wrap;">
             <i class="bi bi-cart w-100 text-center" style="font-size: x-large;"></i>
             <p>Carrito</p>
           </div>
@@ -181,7 +185,7 @@
             nuestro estándar. Garantizamos un proceso de selección en el que analizamos, entre otros, la información
             nutricional, el proceso de elaboración y los sellos, certificados y características medioambientales para
             ser tu tienda natural de confianza.
-            <button class="btn btn-success mt-3" href="https://www.naturitas.es/sellos-y-valores">Saber más</button>
+            <a href="https://www.naturitas.es/sellos-y-valores"><button class="btn btn-success mt-3 w-100" role="button">Saber más</button></a>
           </div>
         </div>
       </div>
@@ -197,7 +201,7 @@
             el NaturHit Green Team, un equipo con la misión de incorporar las soluciones más sostenibles a lo largo de
             todo nuestro proceso de trabajo, desde el día a día en nuestras oficinas hasta el paquete que recibes en
             casa.
-            <button class="btn btn-success mt-3" href="">Saber más</button>
+            <a href="https://www.naturitas.es/sostenibilidad"><button class="btn btn-success mt-3 w-100" role="button">Saber más</button></a>
           </div>
         </div>
       </div>
@@ -212,7 +216,7 @@
             NaturHit nació en 2014 con una misión clara: hacer accesibles los beneficios de la salud natural a más
             personas. Por lo tanto y como nuestro propio nombre indica, lo natural ha sido la base sobre la que se ha
             construido nuestra empresa.
-            <button class="btn btn-success mt-3" href="">Saber más</button>
+            <a href="https://www.naturitas.es/quienes-somos"><button class="btn btn-success mt-3 w-100" role="button">Saber más</button></a>
           </div>
         </div>
       </div>
@@ -227,55 +231,7 @@
             Naturlovers Community es un espacio donde descubrir, intercambiar, aprender y disfrutar. Comparte con el
             resto de naturlovers tus recetas, trucos de belleza, rutinas de deporte o ¡lo que tú quieras! Lo natural, es
             enriquecernos mutuamente.
-            <button class="btn btn-success mt-3" href="">Saber más</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Marcas -->
-    <h3 style="margin-top: 20px; margin-bottom: 20px;">Nuestras marcas</h3>
-    <div class="marcas row d-flex flex-wrap gap-sm-3 mb-4" style="justify-content: center;">
-      <div class="col text-center pt-4" style="background-color: #edf7f1; border-radius: 10px;">
-        <div class="row align-items-center">
-          <div class="col d-none d-lg-block p-0"><img src="ref/marca1.png" class="figure-img" style="width: 125px;"></div>
-          <div class="col">
-            <img src="ref/marca1s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-            <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Naturitas Essentials</p>
-            <p style="font-size: x-small;">Suplementos y alimentación esenciales</p>
-          </div>
-        </div>
-      </div>
-      <div class="w-100 d-sm-none"></div>
-      <div class="col text-center pt-4" style="background-color: #f4e8c7; border-radius: 10px;">
-        <div class="row align-items-center">
-          <div class="col d-none d-lg-block p-0"><img src="ref/marca2.png" class="figure-img" style="width: 125px;"></div>
-          <div class="col">
-            <img src="ref/marca2s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-            <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Zeutics</p>
-            <p style="font-size: x-small;">Suplementos formulados por expertos</p>
-          </div>
-        </div>
-      </div>
-      <div class="w-100 d-md-none"></div>
-      <div class="col text-center pt-4" style="background-color: #e1dbe1; border-radius: 10px;">
-        <div class="row align-items-center">
-          <div class="col d-none d-lg-block p-0"><img src="ref/marca3.png" class="figure-img" style="width: 125px;"></div>
-          <div class="col">
-            <img src="ref/marca3s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-            <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Zentrity</p>
-            <p style="font-size: x-small;">Productos para el bienestar emocional</p>
-          </div>
-        </div>
-      </div>
-      <div class="w-100 d-sm-none"></div>
-      <div class="col text-center pt-4" style="background-color: #f8ebed; border-radius: 10px;">
-        <div class="row align-items-center">
-          <div class="col d-none d-lg-block p-0"><img src="ref/marca4.png" class="figure-img" style="width: 125px;"></div>
-          <div class="col">
-            <img src="ref/marca4s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-            <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Woments</p>
-            <p style="font-size: x-small;">Productos para la salud de la mujer</p>
+            <a href="https://www.naturitas.es/comunidad"><button class="btn btn-success mt-3 w-100" role="button">Saber más</button></a>
           </div>
         </div>
       </div>
@@ -865,6 +821,58 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Marcas -->
+        <h3 style="margin-top: 20px; margin-bottom: 20px;">Nuestras marcas</h3>
+        <div class="marcas row d-flex flex-wrap gap-sm-3 mb-4" style="justify-content: center;">
+          <div class="col text-center pt-4" style="background-color: #edf7f1; border-radius: 10px;">
+            <div class="row align-items-center">
+              <div class="col d-none d-lg-block p-0"><img src="ref/marca1.png" class="figure-img" style="width: 125px;">
+              </div>
+              <div class="col">
+                <img src="ref/marca1s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+                <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Naturitas Essentials</p>
+                <p style="font-size: x-small;">Suplementos y alimentación esenciales</p>
+              </div>
+            </div>
+          </div>
+          <div class="w-100 d-sm-none"></div>
+          <div class="col text-center pt-4" style="background-color: #f4e8c7; border-radius: 10px;">
+            <div class="row align-items-center">
+              <div class="col d-none d-lg-block p-0"><img src="ref/marca2.png" class="figure-img" style="width: 125px;">
+              </div>
+              <div class="col">
+                <img src="ref/marca2s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+                <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Zeutics</p>
+                <p style="font-size: x-small;">Suplementos formulados por expertos</p>
+              </div>
+            </div>
+          </div>
+          <div class="w-100 d-md-none"></div>
+          <div class="col text-center pt-4" style="background-color: #e1dbe1; border-radius: 10px;">
+            <div class="row align-items-center">
+              <div class="col d-none d-lg-block p-0"><img src="ref/marca3.png" class="figure-img" style="width: 125px;">
+              </div>
+              <div class="col">
+                <img src="ref/marca3s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+                <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Zentrity</p>
+                <p style="font-size: x-small;">Productos para el bienestar emocional</p>
+              </div>
+            </div>
+          </div>
+          <div class="w-100 d-sm-none"></div>
+          <div class="col text-center pt-4" style="background-color: #f8ebed; border-radius: 10px;">
+            <div class="row align-items-center">
+              <div class="col d-none d-lg-block p-0"><img src="ref/marca4.png" class="figure-img" style="width: 125px;">
+              </div>
+              <div class="col">
+                <img src="ref/marca4s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+                <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Woments</p>
+                <p style="font-size: x-small;">Productos para la salud de la mujer</p>
+              </div>
             </div>
           </div>
         </div>
