--- a/index.html
+++ b/index.html
@@ -829,51 +829,59 @@
         <h3 style="margin-top: 20px; margin-bottom: 20px;">Nuestras marcas</h3>
         <div class="marcas row d-flex flex-wrap gap-sm-3 mb-4" style="justify-content: center;">
           <div class="col text-center pt-4" style="background-color: #edf7f1; border-radius: 10px;">
-            <div class="row align-items-center">
-              <div class="col d-none d-lg-block p-0"><img src="ref/marca1.png" class="figure-img" style="width: 125px;">
+            <a href="https://www.naturitas.es/marca-propia-naturitas" style="text-decoration: none; color: black;">
+              <div class="row align-items-center">
+                <div class="col d-none d-lg-block p-0"><img src="ref/marca1.png" class="figure-img" style="width: 125px;">
+                </div>
+                <div class="col">
+                  <img src="ref/marca1s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+                  <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Naturitas Essentials</p>
+                  <p style="font-size: x-small;">Suplementos y alimentación esenciales</p>
+                </div>
               </div>
-              <div class="col">
-                <img src="ref/marca1s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-                <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Naturitas Essentials</p>
-                <p style="font-size: x-small;">Suplementos y alimentación esenciales</p>
-              </div>
-            </div>
+            </a>
           </div>
           <div class="w-100 d-sm-none"></div>
           <div class="col text-center pt-4" style="background-color: #f4e8c7; border-radius: 10px;">
-            <div class="row align-items-center">
-              <div class="col d-none d-lg-block p-0"><img src="ref/marca2.png" class="figure-img" style="width: 125px;">
+            <a href="https://www.naturitas.es/b/zeutics-by-naturitas" style="text-decoration: none; color: black;">
+              <div class="row align-items-center">
+                <div class="col d-none d-lg-block p-0"><img src="ref/marca2.png" class="figure-img" style="width: 125px;">
+                </div>
+                <div class="col">
+                  <img src="ref/marca2s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+                  <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Zeutics</p>
+                  <p style="font-size: x-small;">Suplementos formulados por expertos</p>
+                </div>
               </div>
-              <div class="col">
-                <img src="ref/marca2s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-                <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Zeutics</p>
-                <p style="font-size: x-small;">Suplementos formulados por expertos</p>
-              </div>
-            </div>
+            </a>
           </div>
           <div class="w-100 d-md-none"></div>
           <div class="col text-center pt-4" style="background-color: #e1dbe1; border-radius: 10px;">
-            <div class="row align-items-center">
-              <div class="col d-none d-lg-block p-0"><img src="ref/marca3.png" class="figure-img" style="width: 125px;">
+            <a href="https://www.naturitas.es/b/zentrity-by-naturitas" style="text-decoration: none; color: black;">
+              <div class="row align-items-center">
+                <div class="col d-none d-lg-block p-0"><img src="ref/marca3.png" class="figure-img" style="width: 125px;">
+                </div>
+                <div class="col">
+                  <img src="ref/marca3s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+                  <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Zentrity</p>
+                  <p style="font-size: x-small;">Productos para el bienestar emocional</p>
+                </div>
               </div>
-              <div class="col">
-                <img src="ref/marca3s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-                <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Zentrity</p>
-                <p style="font-size: x-small;">Productos para el bienestar emocional</p>
-              </div>
-            </div>
+            </a>
           </div>
           <div class="w-100 d-sm-none"></div>
           <div class="col text-center pt-4" style="background-color: #f8ebed; border-radius: 10px;">
-            <div class="row align-items-center">
-              <div class="col d-none d-lg-block p-0"><img src="ref/marca4.png" class="figure-img" style="width: 125px;">
+            <a href="https://www.naturitas.es/b/woments" style="text-decoration: none; color: black;">
+              <div class="row align-items-center">
+                <div class="col d-none d-lg-block p-0"><img src="ref/marca4.png" class="figure-img" style="width: 125px;">
+                </div>
+                <div class="col">
+                  <img src="ref/marca4s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
+                  <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Woments</p>
+                  <p style="font-size: x-small;">Productos para la salud de la mujer</p>
+                </div>
               </div>
-              <div class="col">
-                <img src="ref/marca4s.png" class="figure-img img-fluid rounded-circle" style="width: 90px;">
-                <p class="mt-3 mb-0 fw-bold" style="font-size: small;">Woments</p>
-                <p style="font-size: x-small;">Productos para la salud de la mujer</p>
-              </div>
-            </div>
+            </a>
           </div>
         </div>
 
@@ -970,10 +978,10 @@
               <button class="btn btn-light fw-bold w-100" style="color: green;">Entra en nuestro blog</button>
               <h5 class="mt-3">Síguenos en</h5>
               <div class="row text-center">
-                <i class="bi bi-facebook col" style="color: white; font-size: 25px;"></i>
-                <i class="bi bi-instagram col" style="color: white; font-size: 25px;"></i>
-                <i class="bi bi-youtube col" style="color: white; font-size: 25px;"></i>
-                <i class="bi bi-tiktok col" style="color: white; font-size: 25px;"></i>
+                <a href="https://www.facebook.com/naturitas.es" class="col"><i class="bi bi-facebook" style="color: white; font-size: 25px;"></i></a>
+                <a href="https://www.instagram.com/naturitas.es/" class="col"><i class="bi bi-instagram" style="color: white; font-size: 25px;"></i></a>
+                <a href="https://www.youtube.com/naturitas" class="col"><i class="bi bi-youtube" style="color: white; font-size: 25px;"></i></a>
+                <a href="https://www.tiktok.com/@naturitas" class="col"><i class="bi bi-tiktok" style="color: white; font-size: 25px;"></i></a>
               </div>
             </div>
           </div>
